# M-LOAM

./: .gitignore  M-LOAM.kdev4  README.md
common/rviz_car_model/: CMakeLists.txt  README.md  package.xml
common/rviz_car_model/launch/: default.launch  demo.launch
common/rviz_car_model/rviz/: demo.rviz  kitti.rviz
docker/: Makefile  (+2 more)
eloam/: CMakeLists.txt  package.xml
eloam/config/: config_eloam.yaml
eloam/include/eloam/: event_frame.h  event_processor.h  loop_registration.hpp  parameters.hpp
eloam/launch/: eloam.launch
eloam/script/: run_reg_test.py
eloam/src/: eloam_node.cpp  event_frame.cpp  event_processor.cpp  keyframe.cpp
eloam/src/factor/: impl_loss_function.cpp  pose_local_parameterization.cpp
eloam/src/utility/: CameraPoseVisualization.cpp  feature_extract.cpp  pose.cpp  utility.cpp
estimator/: CMakeLists.txt  CMakeLists_bck.txt  a.out  estimator.kdev4  package.xml
estimator/config/: config_gz_bay.yaml  config_handheld.yaml  config_realvehicle.yaml  config_realvehicle_hercules.yaml  config_realvehicle_kitti.yaml  config_realvehicle_mltest.yaml  config_realvehicle_oxford.yaml  config_realvehicle_shandong.yaml  config_realvehicle_utbm.yaml  config_simu_jackal.yaml
estimator/launch/: kitti_helper.launch  mloam_gz_bay.launch  mloam_handheld.launch  mloam_handheld_simu.launch  mloam_realvehicle.launch  mloam_realvehicle_hercules.launch  mloam_realvehicle_kitti.launch  mloam_realvehicle_mltest.launch  mloam_realvehicle_oxford.launch  mloam_realvehicle_shandong.launch  mloam_realvehicle_utbm.launch  mloam_simu_jackal.launch
estimator/script/: .8c209a42c764547f8b8e96dc4cd41f2ca6c34d.cam  .c6133dccb0766a8b1c37bc17f9ee48ccb99783f.cam  catkin_alarm.py  load_eval_result.py  rhd_main.sh  run_mloam.py  rv_kitti_main.sh  rv_oxford_main.sh  rv_pingshan_main.sh  sr_main.sh  test_mloam_realvehicle_oxford_1_800.sh  test_mloam_realvehicle_oxford_2000_3500.sh  test_mloam_realvehicle_oxford_250_800.sh  test_mloam_realvehicle_oxford_4900_6500.sh  test_mloam_realvehicle_oxford_7500_8281.sh  test_mloam_realvehicle_oxford_800_2000.sh  test_mloam_realvehicle_oxford_all.sh  test_mloam_realvehicle_oxford_debug.sh
estimator/script/kitti_bash/: test_debug.sh  test_main.sh  test_mloam_realvehicle_oxford_1_800.sh  test_mloam_realvehicle_oxford_1_8281.sh  test_mloam_realvehicle_oxford_2000_3500.sh  test_mloam_realvehicle_oxford_250_800.sh  test_mloam_realvehicle_oxford_4900_6500.sh  test_mloam_realvehicle_oxford_6500_7500.sh  test_mloam_realvehicle_oxford_7500_8281.sh  test_mloam_realvehicle_oxford_800_2000.sh  test_mloam_realvehicle_oxford_all.sh
estimator/script/oxford_bash/: test_1_800.sh  test_1_8281.sh  test_2000_3500.sh  test_250_800.sh  test_4900_6500.sh  test_6500_7500.sh  test_7500_8281.sh  test_800_2000.sh  test_all.sh  test_debug.sh  test_loop.sh  test_main.sh  test_mloam_realvehicle_oxford_1_800.sh  test_mloam_realvehicle_oxford_1_8281.sh  test_mloam_realvehicle_oxford_2000_3500.sh  test_mloam_realvehicle_oxford_250_800.sh  test_mloam_realvehicle_oxford_6500_7500.sh  test_mloam_realvehicle_oxford_7500_8281.sh  test_mloam_realvehicle_oxford_800_2000.sh  test_mloam_realvehicle_oxford_all.sh  test_mloam_realvehicle_oxford_debug.sh  test_mloam_realvehicle_oxford_loop.sh  test_mloam_realvehicle_oxford_main.sh
estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  kittiHelper.cpp  rosNodeGZBay.cpp  rosNodeRHD.cpp  rosNodeRT.cpp  rosNodeRV.cpp  rosNodeRVHercules.cpp  rosNodeRVKITTI.cpp  rosNodeRVOxford.cpp  rosNodeSR.cpp  rosNodeSimu.cpp  rosNodeTest.cpp  save_statistics.hpp
estimator/test/: CMakeLists.txt  test_generate_bag_from_data_oxford.cpp  test_generate_full_map.cpp  test_lego_loam_converter.cpp  test_merge_pointcloud_oxford.cpp  test_merge_pointcloud_rhd.cpp  test_merge_pointcloud_rv.cpp  test_merge_pointcloud_sr.cpp  test_openmp.cpp  test_pointiwithcov.cpp  test_priority_queue  test_rosbag.py
mloam_common/libs/: CMakeLists.txt  package.xml
mloam_loop/: CMakeLists.txt  package.xml
mloam_loop/config/: config_loop_realvehicle.yaml
mloam_loop/launch/: mloam_loop_realvehicle.launch
mloam_loop/script/: run_reg_test.py  run_registration.py
mloam_loop/src/: CameraPoseVisualization.cpp  feature_extract.cpp  keyframe.cpp  loop_closure_node.cpp  loop_registration.cpp  parameters.cpp  parameters.h  pose.cpp  pose_graph.cpp  pose_graph_node.cpp  scan_context.cpp  test_scan_context.cpp
mloam_loop/test/: test_evaluation.cpp  test_fgr.cpp  test_generate_data.cpp  test_generate_loop_data.cpp  test_icp.cpp  test_registration_error.cpp  test_scan_context.cpp
mloam_msgs/: CMakeLists.txt  package.xml
mloam_msgs/msg/: Extrinsics.msg  Keyframes.msg
mloam_pcl/: CMakeLists.txt  package.xml
mloam_pcl/src/: voxel_grid_covariance_mloam.cpp
mloam_test/: CMakeLists.txt  package.xml  test_char.cpp  test_eigen.cpp  test_generate_bag_from_data_oxford.cpp  test_merge_pointcloud_oxford.cpp  test_multi_thread.cpp  test_pointer.cpp  test_priority_queue.cpp
mloam_test/data/: data_curve_fitting.txt  data_non_convex_fitting.txt  fitting_result.txt  problem-49-7776-pre (1).txt.bz2
mloam_test/g2oIO/: PoseGraphIO.cpp  PoseGraphIO.h
mloam_test/src/: .8c209a42c764547f8b8e96dc4cd41f2ca6c34d.cam  bundle_adjuster.cc  ceres_fitting_uct.cpp  ceres_robust_curve_fitting.cpp  ceres_robust_curve_fitting_2.cpp  ceres_simple_bundle_adjustment.cpp  impl_loss_function.cpp  impl_loss_function.hpp  project_path_map.py  test  test_char  test_cuda_voxelgrid.cpp  test_data  test_data.cpp  test_eigen  test_eigen.cpp  test_generate_bag_from_data_hercules.cpp  test_generate_bag_from_data_oxford.cpp  test_generate_full_map.cpp  test_generate_noisy_bag.cpp  test_jacobian_memory.cpp  test_memory  test_memory.cpp  test_merge_pointcloud_oxford.cpp  test_merge_pointcloud_oxford_hxc.cpp  test_merge_pointcloud_rhd.cpp  test_merge_pointcloud_rv_hercules.cpp  test_merge_pointcloud_sr.cpp  test_merge_pose_map.cpp  test_parse_bag.cpp  test_pointer  test_pointiwithcov.cpp  test_priority_queue  test_priority_queue.cpp  test_quaternion.cpp  test_rgi.cpp  test_rnd.cpp  test_stack  test_stack.cpp  test_timing.cpp
(+290 files in other folders)
