<?xml version="1.0"?>
<package format="2">
  <name>eloam</name>
  <version>0.0.0</version>
  <description>eloam package</description>
  <maintainer email="jiaojh1994@gmail.todo">Jianhao JIAO</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <depend>mloam_common</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>